--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
   font-size: 25px;
 }
 .container h1, h2, h3, h4, h5, h6 {
-	font-family: sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 }
 .container h1 {
@@ -23,6 +23,18 @@
 .container h6 {
 	font-size: 0.6em;
 	line-height: 0em;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+  display: inline;
+  font-size: 0.65em;
+}
+
+a {
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.6em;
 }
 
 #header { grid-area: header; }
